# drone-tauri-desktop-application

./: README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.js
python-backend/: download_model.py  drone_detections.db  drone_detections.db-shm  drone_detections.db-wal  main.py  requirements.txt
python-backend/core/: detector.py  stream_manager.py  stream_probe.py  ws_manager.py
python-backend/routes/: cameras.py  detections.py  health.py  settings.py  websocket.py
python-backend/utils/: db.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  python_sidecar.rs
src/app/: layout.js
src/components/: AddCameraModal.js  AppShell.js  BackendStatus.js  CameraFeed.js  Header.js  Sidebar.js
src/components/pages/: AboutPage.js  CamerasPage.js  Dashboard.js  GalleryPage.js  LogsPage.js  SettingsPage.js
src/lib/: alarm.js  api.js  detection-engine.js  tauri.js  utils.js  video-ws.js
src/store/: index.js
src/styles/: globals.css
