[package]
name = "drone-detection-app"
version = "1.0.0"
description = "Drone Detection Desktop Application"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-dialog       = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs           = "2"
tauri-plugin-shell        = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s"
